# SDLTemplate

./: README.md  meson.build
assets/: uh.txt
src/: main.cc
subprojects/: libjpeg.wrap
